[package]
name = "s3-util"
description = "A command line utility for interacting with S3 compatible object stores"
repository = "https://github.com/ryankurte/s3-util"
version = "0.2.2"
authors = ["ryan <ryan@kurte.nz>"]
edition = "2018"
license = "GPL-3.0"


# Configuration for cargo-binstall
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.{ format }"
bin-dir = "{ bin }{ format }"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"


[dependencies]
rust-s3 = {version = "0.26.0", features = ["rustls-tls", "no-verify-ssl"], default-features = false }
async-std = { version = "1.9.0", features = ["attributes", "tokio02"] }
structopt = "0.3.21"
simplelog = "0.10.0"
log = "0.4.14"
anyhow = "1.0.40"
